--- a/views/questions/edit.pug
+++ b/views/questions/edit.pug
@@ -2,12 +2,12 @@ extends _layout.pug
 append js
   script(src='/ckeditor/ckeditor.js')
 block content
-  .question-new
-    .questions-new-head
-      | 您正在为职位
-      a.job-title(href='/job/' + job.id)= job.title
-      | 修改一道试题：
-    form.questions-edit-form.small-font(method='post' action='/job/' + job.id + '/question/' + question.id + '/update')
+  .q-new-edit
+    .q-common-head
+      span.fir-span 您正在为职位
+      a.fir-span(href='/job/' + job.id)= job.title
+      span 修改一道试题：
+    form.q-edit.small-font(method='post' action='/job/' + job.id + '/question/' + question.id + '/update')
       .form-group
         label(for='title' class='label label-input') 标题：
         input(type='text' name='title', id='title' class='form-control', value=question.title, required)
