--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -1,19 +1,25 @@
 extends _layout.pug
 block content
-  .questions-head.relative
-    a.job-title(href='/job/' + job.id)= job.title
-    | 的题目列表
-    a.btn.btn-primary.new-question.absolute(href='/job/' + job.id + '/questions/new') 新建题目
-  .questions-list
-    if questions.length == 0
-      .text-center.no-questions 您还没有为本职位创建任何题目，预先给出试题有助于深入及提前考察面试者！
-    else
-      each question in questions
-        .question.small-font
-          .question-content!= question.content
-          .question-level.relative
-            span 难度：
-              strong= question.levelDesc()
-            a.absolute.answers(href='/question/' + question.id + '/answers') 查看所有解答
-            a.btn.edit-question.absolute(href='/job/' + job.id + '/question/' + question.id + '/edit') 编 辑
-            button.btn.btn-warning.del-question.absolute(data-url='/job/' + job.id + '/question/' + question.id + '/update') 删 除
+  .q-index
+    .q-common-head.flex
+      a.fir-span(href='/job/' + job.id)= job.title
+      span 的题目列表
+      a.btn-primary.new-q(href='/job/' + job.id + '/questions/new') 新建题目
+    .q-list
+      if questions.length == 0
+        .text-center 您还没有为本职位创建任何题目，预先给出试题有助于深入及提前考察面试者！
+      else
+        each question in questions
+          .q-single.small-font
+            .flex
+              a(href='/job/' + question._job + '/question/' + question.id)= question.title
+              span.q-level.small-font 难度：#{question.level}
+            .q-content!= question.content
+            .q-foot.flex
+              span.smaller-font.font-light
+                span.fir-span 分类：#{question.tag}
+                span 标签：#{question.labels.join(' ')}
+              span.q-opts
+                a.fir-span.answers(href='/question/' + question.id + '/answers') 查看所有解答
+                a.fir-span.btn-normal.edit-question(href='/job/' + job.id + '/question/' + question.id + '/edit') 编 辑
+                button.btn-warning.del-question(data-url='/job/' + job.id + '/question/' + question.id + '/update') 删 除
