--- a/views/questions/new.pug
+++ b/views/questions/new.pug
@@ -19,7 +19,7 @@ block content
             option(value=t)= t 
       .form-group
         label(for='labels' class='label label-input') 标签：
-        input(type='text' name='labels', id='labels' class='form-control', required)
+        input(type='text' name='labels', id='labels' class='form-control')
       .form-group
         label(class='label label-input') 难度：
         .levels
