--- a/views/questions/new.pug
+++ b/views/questions/new.pug
@@ -10,7 +10,7 @@ block content
     form.q-new.small-font(method='post' action='/job/' + job.id + '/questions/create')
       .form-group
         label(for='title' class='label label-input') 标题：
-        input(type='text' name='title', id='title' class='form-control', required)
+        input(type='text' name='title', id='title' class='form-control', required, autofocus)
       .form-group
         label(for='tag' class='label label-input') 分类：
         select(name='tag', id='tag' class='form-control', required)
