--- a/views/questions/search.pug
+++ b/views/questions/search.pug
@@ -18,14 +18,4 @@ block content
       .text-center 没有找到符合条件的问题！
     else
       each question in questions
-        .q-single.small-font
-          .flex
-            a(href='/job/' + question._job + '/question/' + question.id)= question.title
-            span.q-level 难度：#{question.level}
-          .q-content!= question.content
-          .q-foot.flex
-            span.smaller-font.font-light
-              span.fir-span 分类：#{question.tag}
-              span 标签：#{question.labels.join(' ')}
-            span.q-opts
-              a.btn-normal(href=`/question/${question.id}/answers/new`) 马上解答
+        include _list_question.pug
