--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -22,5 +22,5 @@ header
             a(href='/logout') 退出
     else
       span.logsig
-        a(href='login' class='btn-primary login') 登陆
-        a(href='signup' class='btn-normal signup') 注册
+        a(href='/login' class='btn-primary login') 登陆
+        a(href='/signup' class='btn-normal signup') 注册
