--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -2,7 +2,7 @@ extends _layout.pug
 append js
   script(src='/ckeditor/ckeditor.js')
 block content
-  form(method='post', action='/jobs', class='new-job hcenter')
+  form(method='post', action='/jobs', class='new-job-fm hcenter')
     .header.text-center.text-bold 创建职位
     .form-group
       label(for='title' class='label label-input') 职位名称：
