--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -30,6 +30,11 @@
     margin-top: 0;
   }
 
+  .questions-link {
+    right: 0;
+    font-size: 1rem;
+  }
+
   .job-section {
     padding-bottom: 0.5em;
     border-bottom: 1px solid #aaa;
