--- a/views/questions/_list_question.pug
+++ b/views/questions/_list_question.pug
@@ -6,9 +6,15 @@
     span.q-level 难度：#{question.level}
   .q-content!= question.content
   .q-foot
-    if isMyJob
-      a.fir-span.btn-normal.edit-question(href='/job/' + job.id + '/question/' + question.id + '/edit') 编 辑
-      button.fir-span.btn-warning.del-question(data-url='/job/' + job.id + '/question/' + question.id + '/update') 删 除
-      a.fir-span.answers(href='/question/' + question.id + '/answers') 查看所有解答
+    if currentUser
+      if currentUser.type == 0
+        if myAnswers[question.id]
+          a.btn-normal(href=`/question/${question.id}/answer/${myAnswers[question.id]}`) 查看我的解答
+        else
+          a.btn-primary(href=`/question/${question.id}/answers/new`) 马上解答
+      else if isMyJob
+        a.fir-span.btn-normal.edit-question(href='/job/' + job.id + '/question/' + question.id + '/edit') 编 辑
+        button.fir-span.btn-warning.del-question(data-url='/job/' + job.id + '/question/' + question.id + '/update') 删 除
+        a.fir-span.answers(href='/question/' + question.id + '/answers') 查看所有解答
     else
-      a.btn-normal(href=`/question/${question.id}/answers/new`) 马上解答
+      a.btn-primary(href=`/question/${question.id}/answers/new`) 马上解答
