--- a/views/jobs/edit.pug
+++ b/views/jobs/edit.pug
@@ -38,4 +38,4 @@ block content
       label(for='notes' class='label label-input') 备注：
       input(type='text', name='notes', id='notes', class='form-control', value=job.notes)
     .form-group.text-center
-      input(type='submit', value='保 存', class='btn btn-primary')
+      input(type='submit', value='保 存', class='btn-primary')
