--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -38,4 +38,4 @@ block content
       label(for='notes' class='label label-input') 备注：
       input(type='text', name='notes', id='notes', class='form-control')
     .form-group.text-center
-      input(type='submit', value='发布职位', class='btn btn-primary')
+      input(type='submit', value='发布职位', class='btn-primary')
