--- a/assets/sass/partials/_all.scss
+++ b/assets/sass/partials/_all.scss
@@ -6,4 +6,5 @@
 @import 'partials/footer';
 @import 'partials/popup_tab';
 @import 'partials/popup_list';
+@import 'partials/popup_list_no_sb';
 @import 'partials/input_labels';
