add star rating

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -5,7 +5,7 @@ html(lang='zh')
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title= title
     block css
-      link(href=assetHashPath("css/font_awesome.css"), rel="stylesheet")
+      link(href=assetHashPath("css/vendor.css"), rel="stylesheet")
   body.flex
     include ./_head.pug
     main
