--- a/assets/sass/questions.scss
+++ b/assets/sass/questions.scss
@@ -44,8 +44,8 @@ $cl-color: #aaa;
 
 .q-lab {
   padding: 0 0.5em;
-  border-left: 1px solid #aaa;
-  border-right: 1px solid #aaa;
+  border-left: 2px solid #aaa;
+  border-right: 2px solid #aaa;
   margin: 0 0.5em;
 }
 
@@ -59,12 +59,14 @@ $cl-color: #aaa;
 
 form.q-new,
 form.q-edit {
-  .level {
+  .br-theme-fontawesome-stars {
     margin-top: 0.6em;
-  }
-  .level > input[type=radio] {
-    vertical-align: middle;
-    margin-top: -2px;
+    .br-widget {
+      a {
+        font-size: 24px;
+        margin-right: 8px;
+      }
+    }
   }
 }
 
