--- a/views/layouts/_foot.pug
+++ b/views/layouts/_foot.pug
@@ -1,5 +1,5 @@
 footer
   .content
-    a(href='/about') 关于我们
+    a(href='http://www.miitbeian.gov.cn/') 蜀ICP备16034651号
     | |
-    a(href='/about/contact') 联系我们
+    a(href='/about') 关于我们
