--- a/assets/sass/partials/_all.scss
+++ b/assets/sass/partials/_all.scss
@@ -1,10 +1,11 @@
-@import 'partials/normalize';
-@import 'partials/base';
-@import 'partials/button';
-@import 'partials/form';
-@import 'partials/header';
-@import 'partials/footer';
-@import 'partials/popup_tab';
-@import 'partials/popup_list';
-@import 'partials/popup_list_no_sb';
-@import 'partials/input_labels';
+@import 'normalize';
+@import '../modules/colors';
+@import 'base';
+@import 'button';
+@import 'form';
+@import 'header';
+@import 'footer';
+@import 'popup_tab';
+@import 'popup_list';
+@import 'popup_list_no_sb';
+@import 'input_labels';
