--- a/views/home/_welcome_other.pug
+++ b/views/home/_welcome_other.pug
@@ -7,8 +7,8 @@
         br
         | 也许你应该和企业提前互动一下，认真解决一些问题，重试学习的热情，并获得实习的机会，马上：
       .student-goto
-        a(href='/questions' class='btn-primary text-bold goto-questions') 去解决问题
-        a(href='/jobs' class='btn-primary text-bold') 看实习岗位
+        a(href='/questions' class='btn-primary goto-questions') 去解决问题
+        a(href='/jobs' class='btn-primary') 看实习岗位
     .welcome-company.flex
       h3 作为一个公司：
       .sentence
@@ -16,4 +16,4 @@
         br
         | 我们希望大学生能够在好好享受大学生活的同时，好好利用人生中这宝贵的四年，能够学有所成。如果你没地方锻炼，我们愿意提供机会
       .company-goto
-        a(href='/jobs/new' class='btn-primary text-bold') 发布职位及其问题
+        a(href='/jobs/new' class='btn-primary') 发布职位及其问题
