--- a/views/profile/_company.pug
+++ b/views/profile/_company.pug
@@ -3,8 +3,8 @@ div.user-info
   form
     mixin buttons
       .operations(style={display: 'none'})
-        button(type='button', class='btn-normal') 修改
-        button(type='button', class='btn-cancel') 取消
+        button(type='button', class='btn-primary') 修改
+        button(type='button', class='btn-normal') 取消
 
     .form-group
       label(for='url' class='label label-input') 公司主页：
