--- a/assets/sass/modules/_colors.scss
+++ b/assets/sass/modules/_colors.scss
@@ -1,27 +1,24 @@
 // 颜色定义
 
 /* text */
-$flash-success-color: #0f0;
-$flash-error-color: #f00;
-
-// 不太重要的字体
-$less-imp: #666;
+$flash-success-color: #090;
+$flash-error-color: #900;
 
 // link
-$link-color: #0276FD;
+$link-color: #00a;
 
 /* button */
 $btn-nor-color: #000;
-$btn-nor-bd-color: #eee;
-$btn-nor-bk-color: #eee;
-$btn-nor-hv-bk-color: #53868B;
+$btn-nor-bd-color: #777;
+$btn-nor-bk-color: #999;
+$btn-nor-hv-bk-color: #888;
 
-$btn-pri-color: #000;
-$btn-pri-bd-color: #eee;
-$btn-pri-bk-color: #2E37FE;
-$btn-pri-hv-bk-color: #0000CD;
+$btn-pri-color: #fff;
+$btn-pri-bd-color: #070;
+$btn-pri-bk-color: #090;
+$btn-pri-hv-bk-color: #080;
 
-$btn-warn-color: #000;
-$btn-warn-bd-color: #eee;
-$btn-warn-bk-color: #B13E0F;
-$btn-warn-hv-bk-color: #8B2500;
+$btn-warn-color: #fff;
+$btn-warn-bd-color: #700;
+$btn-warn-bk-color: #900;
+$btn-warn-hv-bk-color: #800;
