--- a/views/questions/_list_question.pug
+++ b/views/questions/_list_question.pug
@@ -1,9 +1,9 @@
 .q-single.small-font
   .flex
     a.text-bold(href='/job/' + question._job + '/question/' + question.id)= question.title
-    span.q-tag #{question.tag}
-    span.q-lab #{question.labels.join(' ')}
-    span.q-level 难度：
+    span.q-tag.smaller-font #{question.tag}
+    span.q-lab.smaller-font #{question.labels.join(' ')}
+    span.q-level.smaller-font 难度：
       span.br-theme-fontawesome-stars
         span.br-widget.br-readonly
           each l in [0, 1, 2, 3, 4]
