--- a/assets/sass/partials/_base.scss
+++ b/assets/sass/partials/_base.scss
@@ -105,3 +105,23 @@ ul.nav {
 .less-imp {
   color: $less-imp;
 }
+
+// 悬浮框
+.overlay {
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  background-color:#000;
+  opacity:0.5;
+  z-index:100;
+}
+
+.overlay-content {
+  position:fixed;
+  border:6px solid rgba(0,0,0,0.7);
+  z-index:101;
+  padding:6px;
+  background:#fff;
+}
