--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
 block content
   .q-index
-    .q-common-head.flex
+    .q-common-head.flex.large-font
       a.fir-span(href='/job/' + job.id)= job.title
       span 的题目列表
       if isMyJob
