--- a/assets/sass/partials/_base.scss
+++ b/assets/sass/partials/_base.scss
@@ -43,8 +43,8 @@ p {
 /* text */
 .text-center      { text-align: center; }
 .text-bold        { font-weight: bold; }
-.large-font       { font-size: 1.5rem; }
-.larger-font      { font-size: 1.25rem; }
+.large-font       { font-size: 1.4rem; }
+.larger-font      { font-size: 1.2rem; }
 .normal-font      { font-size: 1rem; }
 .small-font       { font-size: 0.9rem; }
 .smaller-font     { font-size: 0.8rem; }
@@ -88,6 +88,7 @@ ul.nav {
   border-width: 1px;
   border-style: solid;
   border-radius: 4px;
+  outline:none;
 }
 
 // 2个紧挨在一起的行内元素，第一个元素右边留空
