--- a/views/questions/_list_question.pug
+++ b/views/questions/_list_question.pug
@@ -1,10 +1,10 @@
-.q-single.small-font
-  .flex
-    a.text-bold(href='/job/' + question._job + '/question/' + question.id)= question.title
+.q-single
+  .q-head.flex.less-imp
+    a(href='/job/' + question._job + '/question/' + question.id)= question.title
     span.q-tag.smaller-font #{question.tag}
     span.q-lab.smaller-font #{question.labels.join(' ')}
     span.q-level.smaller-font 难度：
-      span.br-theme-fontawesome-stars.vertical-middle
+      span.br-theme-fontawesome-stars
         span.br-widget.br-readonly
           each l in [0, 1, 2, 3, 4]
             a(href='#' class={'br-selected': l <= question.level})
@@ -19,6 +19,6 @@
       else if isMyJob
         a.fir-span.btn-normal.edit-question(href='/job/' + job.id + '/question/' + question.id + '/edit') 编 辑
         button.fir-span.btn-warning.del-question(data-url='/job/' + job.id + '/question/' + question.id + '/update') 删 除
-        a.fir-span.answers(href='/question/' + question.id + '/answers') 查看所有解答
+        a.fir-span.answers.small-font(href='/question/' + question.id + '/answers') 查看所有解答
     else
       a.btn-primary(href=`/question/${question.id}/answers/new`) 马上解答
