--- a/views/questions/new.pug
+++ b/views/questions/new.pug
@@ -3,11 +3,11 @@ append js
   script(src='/ckeditor/ckeditor.js')
 block content
   .q-new-edit
-    .q-common-head
+    .q-common-head.large-font
       span.fir-span 您正在为职位
       a.fir-span(href='/job/' + job.id)= job.title
       span 新增一道试题：
-    form.q-new.small-font(method='post' action='/job/' + job.id + '/questions/create')
+    form.q-new(method='post' action='/job/' + job.id + '/questions/create')
       .form-group
         label(for='title' class='label label-input') 标题：
         input(type='text' name='title', id='title' class='form-control', required, autofocus)
