--- a/views/user/passwordReset.pug
+++ b/views/user/passwordReset.pug
@@ -16,7 +16,7 @@ block content
           .form-group
             input(type='email' name='email' id='email' class='form-control' autofocus)
           .form-group
-            input(type='submit' class='btn btn-primary' value='发送重置邮件')
+            input(type='submit' class='btn-primary like-fm-ctl' value='发送重置邮件')
     else if step == 2
       p.reset-hint.text-center 请检查你的邮箱是否收到了重置邮件，里面包含了重置链接，点击链接进行重置. 如果没有，请看看垃圾邮箱
     else if step == 3
@@ -28,7 +28,7 @@ block content
           label(for='new_password_again' class='label label-input') 再次输入新的密码： 
           input(type='password' name='new_password_again' id='new_password_again' class='form-control' autofocus)
         .form-group
-          input(type='submit' class='btn btn-primary' value='修改密码')
+          input(type='submit' class='btn-primary like-fm-ctl' value='修改密码')
     else
       div
         h2 密码重置成功
